Some refactor.